<resources>
    <string name="app_name">E-Lib</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="welcome">Welcome %s</string>
    <string name="add">Add</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="book_successfully_added">Book successfully added!</string>
    <string name="book_could_not_add">Book could not add! Check your connection</string>
    <string name="register_failed_check_your_connection">Register failed! Check your connection.</string>
    <string name="register_succeed">Register succeed!</string>
    <string name="successfully_logged_in">Successfully logged in.</string>
    <string name="login_failed_check_your_connection">Login failed! Check your connection.</string>
    <string name="login_failed_check_your_info">Login failed! Check your information.</string>
    <string name="please_contact_with_developer">Please contact with developer</string>
    <string name="connection_error">Connection error!</string>
    <string name="wrong_user_info">Wrong user info</string>
    <string name="remember_me">Remember me</string>
    <string name="needed_permissions_are_not_granted">Needed permissions are not granted!</string>
    <string name="unknown_error_occurred">An unknown error occurred.</string>
    <string name="new_book">New book</string>
    <string name="refresh">Refresh</string>
    <string name="add_book">Add book</string>
    <string name="logout">Logout</string>
    <string name="not_supported_yet">This feature is not supported yet.</string>
    <string name="friends">Friends</string>
    <string name="account">Account</string>
    <string name="contribution">Contribution</string>
    <string name="settings">Settings</string>
    <string name="restart_app">Restart App</string>
    <string name="language">Language</string>
    <string name="restart_needed__change">Restart needed to apply all changes correctly</string>
    <string name="ok">OK</string>
    <string name="no_contribution">No contribution</string>
    <string name="id" translatable="false">ID%s</string>
    <string name="reg_date">Registration date%s</string>
    <string name="save">Save</string>
    <string name="font" translatable="false">Font</string>
    <string name="book_id">Book ID</string>
    <string name="added_by">Added By</string>
    <string name="comments">Comments</string>
    <string name="details">Details</string>
    <string name="email_or_password_cannot_be_empty">E-Mail or password can not be empty</string>
    <string name="verify_password">Please verify your password</string>
    <string name="ensure_valid_email">Please ensure valid E-Mail</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="email_or_username">E-Mail or Username</string>
    <string name="need_email">To run correctly remember me needed an e-mail</string>
    <string name="account_settings">Account Settings</string>
    <string name="book_details">Book Details</string>
    <string name="book_name_cannot_be_empty">Book name cannot be empty</string>
    <string name="author_cannot_be_empty">Author cannot be empty</string>

    <!-- Languages -->
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="english" translatable="false">English</string>
    <string name="german" translatable="false">Deutsch</string>

    <!-- Dialog Strings -->
    <string name="update">Update</string>
    <string name="new_version_released">New version is released</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="account_updated">Your account info has changed!</string>
    <string name="do_you_agree">Do you agree?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info_cannot_change_without_any_change">Info cannot be updated without any change</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="book">Book</string>
    <string name="sort">Sort</string>
    <string name="a_to_z_book_name">A to Z (Book Name)</string>
    <string name="z_to_a_book_name">Z to A (Book Name)</string>
    <string name="old_to_new">Old to New</string>
    <string name="new_to_old">New to Old</string>
    <string name="a_to_z_author_name">A to Z (Author Name)</string>
    <string name="z_to_a_author_name">Z to A (Author Name)</string>
</resources>