<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.settings.SettingsActivity">

    <include
        layout="@layout/actionbar"
        android:id="@+id/activity_settings_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_settings_actionbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_settings_tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/language"
                android:textColor="@color/teal_200" />

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_settings_card_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#0DFFFFFF"
                android:layout_below="@id/activity_settings_tv_language"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:id="@+id/activity_settings_card_tv_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/activity_settings_card_tv_currentLang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activity_settings_tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/activity_settings_card_language"
                android:text="@string/account"
                android:textColor="@color/teal_200" />

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_settings_card_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#0DFFFFFF"
                android:layout_below="@id/activity_settings_tv_account"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:id="@+id/activity_settings_card_tv_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_settings"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:id="@+id/activity_settings_card_tv_userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name" />

                    <TextView
                        android:id="@+id/activity_settings_card_tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_email" />

                    <TextView
                        android:id="@+id/activity_settings_card_tv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activity_settings_tv_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/activity_settings_card_account"
                android:text="@string/book"
                android:textColor="@color/teal_200" />

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_settings_card_sortingBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_settings_tv_book"
                app:cardBackgroundColor="#0DFFFFFF"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_settings_card_tv_sortingType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/activity_settings_card_tv_currentSortingType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>