<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        layout="@layout/actionbar"
        android:id="@+id/register_activity_actionbar" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_activity_actionbar"
        android:layout_marginTop="50dp"
        android:src="@drawable/library_icon" />

    <EditText
        android:id="@+id/register_activity_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/user_name"
        android:background="@drawable/edittext_bg"
        android:padding="10dp" />

    <EditText
        android:id="@+id/register_activity_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_activity_username"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        android:background="@drawable/edittext_bg"
        android:padding="10dp" />

    <EditText
        android:id="@+id/register_activity_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_activity_et_email"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg"
        android:padding="10dp" />

    <EditText
        android:id="@+id/register_activity_et_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_activity_et_password"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg"
        android:padding="10dp" />

    <Button
        android:id="@+id/register_activity_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_activity_et_password_again"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_color"
        android:textSize="16sp"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/register_activity_cb_rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginTop="10dp"
        android:layout_below="@id/register_activity_btn_login"
        android:layout_marginHorizontal="45dp"/>

    <ProgressBar
        android:id="@+id/register_activity_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_activity_et_password_again"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</RelativeLayout>