<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MyCustomTabLayout"
    tools:context=".main.profile.ProfileActivity">

    <include
        layout="@layout/actionbar"
        android:id="@+id/activity_profile_actionbar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/activity_profile_tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyCusotumTextApaerance"
        android:layout_below="@id/activity_profile_actionbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/activity_profile_tabitem_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/activity_profile_tabitem_katkı"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contribution" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/activity_profile_tabitem_borrowedBooks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ödünç Alınanlar" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/activity_profile_tabitem_arkadaş"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/activity_profile_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_profile_tablayout" />

</RelativeLayout>